--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.24.5",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
