--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.1",
     "styled-components": "^6.1.16",
     "tailwindcss": "^4.0.17"
   },
