--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -14,7 +14,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=sdtpdb-rajanithbandara123-4f7d.g.aivencloud.com; port=11635; Database=sdtpdb; Username=avnadmin; Password=AVNS_XJQQgZF9tofZaQH2rCa"
+    "DefaultConnection": ""
   },
   "JwtSettings": {
     "Issuer": "http://localhost:5000",
